k8s-lab/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "192.168.30.241"
  listeners:
    - hostname: "*.dev.tylerc.me"
      name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - hostname: "*.dev.tylerc.me"
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: dev-tylerc-me-wildcard
      allowedRoutes:
        namespaces:
          from: All
