k8s-lab/cilium/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
    - hubble.dev.tylerc.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
